# Vsense-Wifi-Sensing

./: .gitignore  README.md  analiz.py  data_oku.py  karar_motoru.py  motion_analiz.py  tek_data_analiz.py
data/: README.md
data/sessions/: empty_room.jsonl  hand_movement.jsonl  test_raw_csi.jsonl  walking.jsonl
docs/: csi_analysis_workflow.md  data_schema.md  firmware_design.md  firmware_notes.md  mqtt_smoke_test.md  packet_format.md
docs/references/: esp32_csi_tool_notes.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.c  role_rx.c  role_rx.h  role_tx.c  role_tx.h  vsense_config.h  vsense_mqtt.c  vsense_mqtt.h  vsense_wifi.c  vsense_wifi.h
notebooks/: 01_csi_data_analysis.ipynb
server/: README.md  analyze_motion_sessions.py  analyze_recording.py  analyze_subcarriers.py  csi_live.py  csi_live_plot.py  csi_replay.py  csi_utils.py  ingest_data.py  mqtt_collector.py  requirements.txt  udp_collector.py
server/config/: selected_subcarriers.txt
