idf_component_register(
    SRCS
        "app_main.c"
        "role_tx.c"
        "role_rx.c"
        "vsense_wifi.c"
        "vsense_mqtt.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        lwip
        esp_timer
        mqtt
)